Apply scrollbar color correctly #3491

--- a/webextensions/sidebar/styles/proton/proton.css
+++ b/webextensions/sidebar/styles/proton/proton.css
@@ -150,7 +150,8 @@ body,
 
 /* tab bar */
 
-#tabbar:not(.scrollbar-autohide) {
+#tabbar:not(.scrollbar-autohide) #pinned-tabs-container,
+#tabbar:not(.scrollbar-autohide) #normal-tabs-container {
   scrollbar-color: var(--browser-toolbar_text-darker, var(--theme-colors-toolbar_bottom_separator, var(--in-content-button-background-hover-mixed)))
                    var(--theme-colors-toolbar, var(--in-content-box-background));
 }
